#262: Added CommandSecurityDefinitions to Filter Adjustment Fixed Amount UCs